# test_proj6

./: .gitignore  README.md  central_limit_experiment.py  claude.md  pyproject.toml  python_dev.md
.claude/: settings.local.json
config/: experiment.yaml
config/experiments/: comparison_high_n.yaml  comparison_low_n.yaml  large_experiment.yaml  medium_experiment.yaml  small_experiment.yaml
tests/: test_central_limit_experiment.py
